--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@types/node": "^14.0.14",
     "@types/react": "^16.9.41",
+    "prettier": "^2.0.5",
     "typescript": "^3.9.6"
   }
 }
