--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint:ts": "eslint './src/**/*.{ts,tsx}'",
+    "lint:css":"stylelint './src/**/*.{ts,tsx}'",
+    "fix:ts": "eslint --fix './src/**/*.{ts,tsx}",
+    "fix:css": "stylelint --fix './src/**/*.{ts,tsx}"
   },
   "dependencies": {
     "next": "9.4.4",
