--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest --watch",
     "test:coverage": "jest --coverage",
     "lint:ts": "eslint './src/**/*.{ts,tsx}'",
-    "lint:css":"stylelint './src/**/*.{css,sass,scss,ts,tsx}'",
+    "lint:css": "stylelint './src/**/*.{css,sass,scss,ts,tsx}'",
     "fix:ts": "eslint --fix './src/**/*.{ts,tsx}'",
     "fix:css": "stylelint --fix './src/**/*.{css,sass,scss,ts,tsx}'",
     "prettier:check": "prettier --check './src/**/*.{ts,tsx,json}'",
@@ -28,6 +28,7 @@
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
     "babel-jest": "^26.1.0",
+    "babel-plugin-styled-components": "^1.10.7",
     "eslint": "^7.3.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-loader": "^4.0.2",
@@ -35,6 +36,7 @@
     "eslint-plugin-react": "^7.20.3",
     "jest": "^26.1.0",
     "prettier": "^2.0.5",
+    "styled-components": "^5.1.1",
     "stylelint": "^13.6.1",
     "stylelint-config-recess-order": "^2.0.4",
     "stylelint-config-recommended": "^3.0.0",
