--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prettier:fix": "prettier --write './src/**/*.{ts,tsx,json}'"
   },
   "dependencies": {
+    "@octokit/request": "^5.4.5",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1"
