chore(dependency): add SWR (react hooks library for data fetching)

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@octokit/request": "^5.4.5",
     "next": "9.4.4",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "swr": "^0.2.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.0",
