--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.3",
     "jest": "^26.1.0",
+    "msw": "^0.19.5",
     "prettier": "^2.0.5",
     "styled-components": "^5.1.1",
     "stylelint": "^13.6.1",
