--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.0",
     "@testing-library/react": "^10.4.3",
+    "@testing-library/react-hooks": "^3.3.0",
     "@types/jest": "^26.0.3",
     "@types/node": "^14.0.14",
     "@types/react": "^16.9.41",
@@ -40,6 +41,7 @@
     "jest": "^26.1.0",
     "msw": "^0.19.5",
     "prettier": "^2.0.5",
+    "react-test-renderer": "^16.13.1",
     "styled-components": "^5.1.1",
     "stylelint": "^13.6.1",
     "stylelint-config-recess-order": "^2.0.4",
