--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "normalize.css": "^8.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "swr": "^0.2.3"
+    "swr": "^0.2.3",
+    "typeface-source-sans-pro": "^1.1.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.0",
