--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "normalize.css": "^8.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-icons": "^3.10.0",
     "swr": "^0.2.3",
     "typeface-source-sans-pro": "^1.1.5"
   },
